moved files into project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             type="text"
             name="image"
             value=""
-            placeholder="Enter a team logo..."
+            placeholder="URL for team logo..."
             class="input-text"
           />
           <br />
