now teams are able to be searched and card is created for team

--- a/index.html
+++ b/index.html
@@ -12,42 +12,12 @@
         alt="basketball-header"
         />
     </div>
-<h2>Create your own NBA TEAM!</h2>
-    <div class="container">
-        <form class="add-team">
-            <input
-            type="text"
-            name="city"
-            value=""
-            placeholder="Enter a city..."
-            class="input-text"
-          />
-          <br />
-          <input
-            type="text"
-            name="team name"
-            value=""
-            placeholder="Enter a team name..."
-            class="input-text"
-          />
-          <br />
-          <input
-            type="text"
-            name="image"
-            value=""
-            placeholder="URL for team logo..."
-            class="input-text"
-          />
-          <br />
-          <input
-            type="submit"
-            name="submit"
-            value="Create Team"
-            class="submit"
-          />
-        </form>
-      </div>
-      <div id="current-teams"</div>
+    <div class="search-team">
+      <h1>Search your Favorite NBA Team</h1>
+          <input id='searchInput' type='text' placeholder="Enter team name...">
+        <button id = "searchButton">Search</button>
+        </div>
+      <div id="current-teams"></div>
 <script src="index.js"></script>
     
 </body>
